# ather-feedback

./: README.md  pyproject.toml
.github/workflows/: scrape.yml
backend/: .env.example  .gitignore  analyzer.py  db.py  main.py  requirements.txt  scraper.py  sentiment.py  setup.sh
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/dashboard/: route.ts
frontend/app/api/posts/: route.ts
frontend/app/clusters/: page.tsx
frontend/app/posts/: page.tsx
frontend/components/: ClusterList.tsx  PostCard.tsx  SentimentChart.tsx
frontend/lib/: db.ts
libsql/: schema.sql
