[project]
name = "ather-feedback"
version = "0.1.0"
description = "Ather Reddit Feedback Monitor"
requires-python = ">=3.11"
dependencies = [
    "praw>=7.7.0",
    "nltk>=3.8.0",
    "libsql>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
